--- a/port.css
+++ b/port.css
@@ -1,8 +1,10 @@
 
 header {
     height: 100px;
-    background-image: url(https://pbs.twimg.com/profile_banners/3426233404/1603710405/1500x500)
-    
+    background-image: url(https://i.imgur.com/PyTV3aC.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 h1 {
